# miscboards

./: .gitmodules  README.md
android/: .gitignore
android/jfltexx/: Dockerfile  build.sh  flash.sh  init.sh
arduino/nrf24_receiver/: nrf24_receiver.ino  playback.py
avr/lightsaber/: CMakeLists.txt
avr/lightsaber/avr-libc/: README.md
avr/lightsaber/dfp/include/avr/: io.h
avr/lightsaber/fonts/BMF/: config.json
avr/lightsaber/fonts/Ominous/: config.json
avr/lightsaber/scripts/: pwm_lut.py  spinor.py
avr/lightsaber/src/: anim.c  anim.h  app.c  audio.c  audio.h  btn.c  btn.h  dbg.c  flash.c  flash.h  font.c  font.h  imu.c  imu.h  leds.c  leds.h  main.c  pwr.c  pwr.h  sdfat.py
avr/lightsaber/src/anims/: extend.c  extend.h  off.c  off.h  solid.c
avr/sleepManager/: CMakeLists.txt
avr/sleepManager/src/: main.c  power.h
lattice/: .gitignore  Dockerfile  README.md  boilerplate.mk
lattice/rvice_adc/: Makefile
linux/: .gitignore
linux/dir601b1/: .config  Dockerfile  build.sh
linux/jfltexx/: Dockerfile
linux/piusb/: README.md  setup_usb.service  setup_usb.sh
microchip/avr/: README.md
microchip/avr/word_watch/: CMakeLists.txt  lut.py
microchip/avr/word_watch/src/: btn.c  btn.h  clock.c  clock.h  dbg.c  dbg.h  main.c  matrix.c  matrix.h  pwr.c  pwr.h
microchip/microchip_studio/: .gitignore
microchip/pic/solarFRAM/: CMakeLists.txt
microchip/pic/solarFRAM/src/: config.h  flash.c  i2c.c  led.c
microchip/samd/keyboard/sim/: CMakeLists.txt  common.cpp  common.h  device.cpp  host.cpp
microchip_studio/attiny10_lin/: attiny10_lin.atsln
microchip_studio/nrf24_remote/: nrf24_remote.atsln
microchip_studio/psu_monitor/: psu_monitor.atsln
nxp/SDK/: init.cmake
nxp/SDK/freertos/: CMakeLists.txt  lib.cmake  main.cpp
nxp/SDK/freertos/inc/lpc1549/: FreeRTOSConfig_template.h
nxp/SDK/freertos/inc/lpc1768/: FreeRTOSConfig_template.h
nxp/SDK/freertos/src/: main.c
nxp/SDK/freertos_tcp/: CMakeLists.txt  lib.cmake
nxp/SDK/freertos_tcp/inc/: FreeRTOS_errno_TCP.h
nxp/SDK/freertos_tcp/inc/lpc1768/: FreeRTOSIPConfig_template.h
nxp/SDK/lpc1549/: CMakeLists.txt  FreeRTOSConfig_template.h  lib.cmake  linker.ld  startup.c  toolchain.cmake
nxp/SDK/lpc1549/inc/: romapi_15xx.h  spi_15xx.h
nxp/SDK/lpc1549/src/: gpio_15xx.c  spi_15xx.c  sysinit_15xx.c
nxp/SDK/tinyusb/: CMakeLists.txt  lib.cmake  ncm_device.c
nxp/lpc1549_oaspi/: CMakeLists.txt  plca.py
nxp/lpc1549_oaspi/inc/: FreeRTOSConfig.h  eth.h  oaspi.h  spi.h  tusb_config.h  usb.h  usr.h
nxp/lpc1549_oaspi/inc/netif/: ethernet.h
nxp/lpc1549_oaspi/scripts/: fcs.py  plca.py
nxp/lpc1549_oaspi/scripts/pcap/: CMakeLists.txt  eth.cpp  eth.h  main.cpp
nxp/lpc1549_oaspi/scripts/webhid/: index.html  usb.js
nxp/lpc1549_oaspi/src/: app.cpp  dbg.cpp  eth.cpp  oaspi.cpp  spi.cpp  usb.cpp  usr.cpp
nxp/lpc1549_oaspi/webhid/: index.html  usb.js
nxp/lpc1768_poe/: CMakeLists.txt
nxp/lpc1768_poe/inc/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  eth.h  mongoose_config.h  tusb_config.h
nxp/lpc1768_poe/platform/: FreeRTOSConfig.h  linker.ld  main.c  startup.c
nxp/lpc1768_poe/src/: app.cpp  dbg.c  dbg.cpp  eth.cpp  eth.h  main.c  main.cpp  usb.cpp  usr.cpp
pi_pico/ble_minimal/: CMakeLists.txt
pi_pico/ble_minimal/src/: ble.cpp  ble.h  btstack_config.h  keyboard.gatt  main.cpp
pi_pico/keyboard/: CMakeLists.txt
pi_pico/keyboard/src/: ble.cpp  ble.h  btstack_config.h  config.h  encoder.cpp  encoder.h  encoder.pio  gui.cpp  gui.h  keyboard.gatt  kscan.c  kscan.cpp  kscan.h  macro.cpp  macro.h  main.c  main.cpp  pio_alloc.cpp  pio_alloc.h  ssd1306.cpp  ssd1306.h  usb.cpp  usb.h  ws2812b.c  ws2812b.cpp  ws2812b.h  ws2812b.pio
pi_pico/keyboard/src/configs/: macropad.h
pic/solarFRAM/: CMakeLists.txt
psoc_creator/: .gitignore  psoc_creator.cywrk
psoc_creator/100BASE-T1.cydsn/: 100BASE-T1.cyprj  main.c  mdio_bb.c  rgb.c  rgb.h
raspberrypi/: .gitignore
raspberrypi/SDK/: README.md  init.cmake  toolchain.cmake
raspberrypi/SDK/freertos/: CMakeLists.txt  FreeRTOSConfig_template.h  lib.cmake  main.c  main.cpp
raspberrypi/ble_minimal/: CMakeLists.txt
raspberrypi/ble_minimal/src/: FreeRTOSConfig.h  app.cpp  ble.cpp  ble.h  hid.gatt  keyboard.gatt
raspberrypi/blinky/: CMakeLists.txt
raspberrypi/blinky/src/: FreeRTOSConfig.h  app.cpp
raspberrypi/hid_minimal/: CMakeLists.txt
raspberrypi/hid_minimal/inc/: FreeRTOSConfig.h  ble.h  btstack_config.h  hid.h  tusb_config.h  usb.h
raspberrypi/hid_minimal/src/: app.cpp  ble.cpp  hid.gatt  usb.cpp
raspberrypi/sleep/: CMakeLists.txt
raspberrypi/sleep/src/: FreeRTOSConfig.h  app.cpp
wch/: .gitignore  README.md
wch/SDK/: ch32v003.cmake
wch/SDK/ch32v003/: CMakeLists.txt  linker.ld  toolchain.cmake
wch/SDK/ch32v003/src/: ch32v00x_conf.h  exception.cpp  startup.c  system_ch32v00x.c  system_ch32v00x.h
wch/SDK/ch32v20x/: CMakeLists.txt  linker.ld  toolchain.cmake
wch/SDK/ch32v20x/src/: ch32v20x_conf.h  startup.c  system_ch32v20x.c  system_ch32v20x.h
wch/SDK/freertos/: CMakeLists.txt
wch/SDK/freertos/src/ch32v20x/: FreeRTOSConfig_template.h  main.c
wch/SDK/tinyusb/: CMakeLists.txt
wch/adin1100_podl/: CMakeLists.txt
wch/blinky/: CMakeLists.txt
wch/blinky/src/: dbg.c  dbg.cpp  exception.cpp  led.c  led.h  main.c  main.cpp  ticker.h
wch/blinky/src/ch32v003/: dbg.cpp  led.cpp  ticker.cpp
wch/blinky/src/ch32v20x/: dbg.cpp  led.cpp  ticker.cpp
wch/blinky/src/ch32x035/: dbg.cpp  led.cpp  ticker.cpp
wch/mouse_jiggler/: CMakeLists.txt
wch/mouse_jiggler/src/: app.cpp
wch/mouse_jiggler/src/ch32v20x/: FreeRTOSConfig.h  dbg.cpp  stm32f1xx.h  tusb_config.h
wch/rvice_adc/: CMakeLists.txt
wch/rvice_adc/platform/ch32v20x/: FreeRTOSConfig.h  audio.cpp  btn.cpp  fpga.cpp  init.c  main.c  rgb.cpp  tusb_config.h
wch/rvice_adc/platform/ch32v20x/rtos/: FreeRTOSConfig.h  dbg.c  main.c  portmacro.h
wch/rvice_adc/scripts/: plot.py
wch/rvice_adc/src/: app.cpp  audio.h  btn.h  fpga.h  main.cpp  rgb.h  tick.h  usb.cpp  usb.h
wch/rvice_adc/src/ch32v20x/: btn.cpp  dbg.cpp  fpga.cpp  rgb.cpp  tick.cpp
wch/solder_dispenser/: CMakeLists.txt
(+171 files in other folders)
